# hackathon

./: .env.example  .gitignore  GETTING-STARTED.md  INDEX.md  PHASE-7-COMPLETE.md  PROJECT-SUMMARY.md  README.md  deploy-aws.ps1  deploy-aws.sh  generate_simple_scores.py  phase-0-project-setup.md  phase-1-data-generation.md  phase-2-feature-engineering.md  phase-3-model-training.md  phase-4-api-serving.md  phase-5-intervention-engine.md  phase-6-dashboard.md  phase-7-aws-deployment-free-tier.md  phase-7-aws-deployment.md  phase-7-gcp-deployment.md  phase-8-demo-presentation.md  plan.md  populate_test_interventions.py  pre-delinquency-key.pem  requirements-advanced.txt  requirements.txt  run-local.ps1  run_complete_pipeline_v2.py
dashboard/: app.py
pre-delinquency-engine/: .gitignore  ARCHITECTURE.md  AWS-DEPLOYMENT-SUMMARY.md  COMPLETE-KAFKA-CONVERSION.md  CONTRIBUTING.md  DEPLOY-AWS-FREE-TIER.md  DEPLOY-FROM-WSL.md  HANDOVER.md  KAFKA-COMPLETE.md  KAFKA-INTEGRATION.md  KAFKA-SETUP.md  LICENSE  NEXT-STEPS.md  QUICK-RETRAINING-GUIDE.md  QUICK-START.md  README.md  RETRAINING.md  SETUP.md  STREAMING-COMPLETE.md  TODO.md  check_and_retrain.py  deploy-aws.sh  docker-compose.yml  generate_historical_scores.py  generate_risk_scores_v2.py  generate_scores.sh  generate_simple_scores.py  pyproject.toml  quick_test_api.py  retrain_with_smote.py  run-local.sh  run_advanced_training.py  run_complete_pipeline.py  run_complete_pipeline_v2.py  run_streaming_pipeline.py  test_action_center_components.py  test_api.py  test_kafka.py  test_retraining.py  test_streaming_pipeline.py  (+1 more)
(+85 files in other folders)
